--- a/app/globals.css
+++ b/app/globals.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap');
 
 @layer base {
   :root {
@@ -38,7 +38,7 @@
   }
 
   .dark {
-    --background: 222.2 84% 4.9%;
+    --background: 0, 0%, 6%;
     --foreground: 210 40% 98%;
 
     --card: 222.2 84% 4.9%;
@@ -62,20 +62,21 @@
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 210 40% 98%;
 
-    --border: 217.2 32.6% 17.5%;
+    --border: 0 0% 18%;
     --input: 217.2 32.6% 17.5%;
     --ring: 212.7 26.8% 83.9%;
+
+    --radius: 0.5rem;
   }
 }
 
 @layer base {
   * {
     @apply border-border;
+    transition: background-color 500ms linear;
   }
   body {
-    @apply bg-background text-foreground;
-    background-color: #101010;
-    color: #f3f5f7;
-    font-family: "Montserrat", sans-serif;
+    /* color: #f3f5f7; */
+    font-family: 'Montserrat', sans-serif;
   }
 }
